# book-llm-from-scratch

./: README.md  pyproject.toml
llm_from_scratch/transformer/: attention.py  transformer.py  utils.py
notebooks/basic/: numpy_basic.ipynb  pytorch_basic.ipynb
notebooks/chapter02/: section2.ipynb  section3.ipynb  section5_1.ipynb  section5_2.ipynb  section5_3.ipynb
