[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Learn and implement LLMs from scratch"
authors = [
    {name = "aRySt0cat", email = "ryuta.academic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.1.1",
    "numpy>=1.26.2",
    "matplotlib>=3.8.2",
    "japanize-matplotlib>=1.1.3",
    "tqdm>=4.66.2",
    "ipywidgets>=8.1.2",
    "scipy>=1.13.0",
    "tensorboard>=2.12.0",
    "notebook>=7.0.6",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "torchtext>=0.16.0; sys_platform != 'linux' or platform_machine != 'aarch64'",
    "tokenizers>=0.15.2",
    "transformers>=4.44.0,<4.50.0",
    "datasets>=4.1.0",
    "tiktoken>=0.11.0",
    "accelerate>=1.10.1",
    "sentencepiece>=0.2.1",
    "neologdn>=0.5.3; sys_platform != 'linux' or platform_machine != 'aarch64'",
    "deepspeed>=0.18.3",
    "wandb>=0.23.1",
    "peft==0.14.0",
    "trl==0.9.6",
    "rich>=14.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
